# tabulardelta

./: .copier-answers.yml  .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/: CODEOWNERS  release-drafter.yml
.github/actions/mssql-linux/: action.yml
.github/actions/mssql-windows/: action.yml
.github/workflows/: build.yml  chore.yml  ci.yml
conda.recipe/: recipe.yaml
docs/: conf.py  index.rst
docs/_static/: custom.css
tabulardelta/: __init__.py  tabulardelta.py
tabulardelta/comparators/: __init__.py  comparator.py  native_dataclasses.py  pandas_comparator.py  pandas_dataclasses.py  polars_comparator.py  sqlcompyre_comparator.py  sqlmetadata_comparator.py  tabulardelta_dataclasses.py
tabulardelta/formatters/: detailed_text_formatter.py  formatter.py  overview_row_formatter.py
tabulardelta/formatters/tabulartext/: __init__.py  cell.py  table.py
tests/: test_comparators.py  test_docs_examples.py  test_formatters.py  test_tabular_text.py
tests/mssql_container/: cached_mssql_container.py  docker-compose.yml
tests/test_assets/: week24.csv  week25.csv
